Updated to latest version

--- a/README
+++ b/README
@@ -3,4 +3,6 @@ Msc. Software Engineering, University of Amsterdam
 
 Software Analytics
 
-This Rascal program analyzes Java projects.
+Authors:
+Laurens Knoll
+Martijn Endenburg
